llm: improve parsing in issue extender